# libds4

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  ds4_test  vcpkg.json  xmake.lua
cmake/: libds4Config.cmake.in
include/ds4/: ds4.h  ds4_build_config.h  ds4_controls.h  ds4_export.h  ds4_handle.h  ds4_identify.h  ds4_input.h  ds4_models.h  ds4_output.h  ds4_private.h  hidapi_macro.h
include/ds4pp/: Device.hpp  Input.hpp  Models.hpp  TouchPad.hpp
include/libds4/: bit_manip.h  ds4.h  ds4_controls.h  ds4_handle.h  ds4_identify.h  ds4_input.h  ds4_output.h  ds4_time.h
src/: ds4_controls.c  ds4_handle.c  ds4_identify.c  ds4_input.c  ds4_output.c
src/ds4/: ds4_controls.c  ds4_handle.c  ds4_identify.c  ds4_input.c  ds4_output.c
src/ds4pp/: Device.cpp
tests/: commands.c  cpp_test.cpp  debug_menu.c  gui_debug_menu.cpp  main.c  test.c  touchpad_test.cpp
